# flibbert-engine

./: .clang-format  .clangd  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  todo.txt
Flibbert/: CMakeLists.txt  Dependencies.cmake
Flibbert/src/: Flibbert.h  fbtpch.h
Flibbert/src/Flibbert/Core/: Application.cpp  Application.h  AssertionMacros.cpp  AssertionMacros.h  Base.h  Camera.cpp  Camera.h  Delegates.cpp  Delegates.h  EntryPoint.h  Input.cpp  Input.h  KeyCodes.h  Log.cpp  Log.h  Platform.h  PlatformDetection.h  ScopeGuard.h  StringName.cpp  StringName.h  StringUtils.cpp  StringUtils.h  Types.h
Flibbert/src/Flibbert/Debug/: Instrumentor.h  Profiling.h
Flibbert/src/Flibbert/Input/: Input.cpp  Input.h  InputEvent.cpp  InputEvent.h
Flibbert/src/Flibbert/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  Renderer.cpp  Renderer.h  RendererBackend.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Flibbert/src/Flibbert/Renderer/2D/: Camera2D.cpp  Camera2D.h
Flibbert/src/Flibbert/Renderer/3D/: Camera3D.cpp  Camera3D.h
Flibbert/src/Platform/: Window.cpp  Window.h
Flibbert/src/Platform/D3D11/: D3D11Buffer.cpp  D3D11Buffer.h  D3D11RendererBackend.cpp  D3D11RendererBackend.h  D3D11Shader.cpp  D3D11Shader.h  D3D11Texture.cpp  D3D11Texture.h  D3D11VertexArray.cpp  D3D11VertexArray.h
Flibbert/src/Platform/Desktop/: DesktopPlatform.cpp  Window.cpp  Window.h
Flibbert/src/Platform/Metal/: MetalRendererBackend.cpp  MetalRendererBackend.h
Flibbert/src/Platform/OpenGL/: IndexBuffer.cpp  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererBackend.cpp  OpenGLRendererBackend.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBufferLayout.h
Flibbert/src/Platform/Vulkan/: VulkanRendererBackend.cpp  VulkanRendererBackend.h
Sandbox/: CMakeLists.txt
Sandbox/assets/shaders/: Basic.frag  Basic.frag.hlsl  Basic.vert  Basic.vert.hlsl  MeshGen.frag  MeshGen.vert
Sandbox/assets/shaders/DemoBirb/: Birb.frag  Birb.vert  Pipe.frag  Pipe.vert
Sandbox/assets/shaders/Include/: Math.shader  Noise.shader  Random.shader
Sandbox/src/: AssetPathsMacros.h.in  SandboxApp.cpp  asset.h.in
Sandbox/src/Demos/: Demo.cpp  Demo.h  DemoCamera3D.cpp  DemoCamera3D.h  DemoClearColor.cpp  DemoClearColor.h  DemoFloppyBirb.cpp  DemoFloppyBirb.h  DemoMeshGeneration.cpp  DemoMeshGeneration.h  DemoTexture2D.cpp  DemoTexture2D.h
res/shaders/: Basic.frag  Basic.vert
src/: Application.cpp  Application.h  Display.cpp  Display.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
src/demos/: Demo.cpp  Demo.h  DemoCamera3D.cpp  DemoCamera3D.h  DemoClearColor.cpp  DemoClearColor.h  DemoTexture2D.cpp  DemoTexture2D.h
src/neko/: Camera.cpp  Camera.h  Input.cpp  Input.h  KeyCodes.h
src/opengl/: IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBufferLayout.h  asset.h.in
